# i3dr_halcon_surface_matcher-ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: FindHalcon.cmake
halconmatcher/: CMakeLists.txt
halconmatcher/include/halconmatcher/: halconmatcher.h
halconmatcher/src/: halconmatcher.cpp  vanilla_halcon.cpp
halconmatcher/test/: reference_model_m.stl
launch/: match_deimos.launch  standalone.launch  titania_detect.launch
rviz/: titania.rviz
src/: CMakeLists.txt  halconmatcher.cpp  match_node.cpp
test/: aluminium_tube.dae  aluminium_tube.stl  reference_model.stl  test_match.cpp
