<?xml version="1.0"?>
<package format="2">

  <name>i3dr_halcon_surface_matcher</name>
  <version>0.0.1</version>
  <description>
    A ROS driver for Halcon's surface matching
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>asr_halcon_bridge</depend>

  <test_depend>rosunit</test_depend>
  
</package>
